Began work on website, it is very not finished.

--- a/templates/article template.html
+++ b/templates/article template.html
@@ -18,14 +18,11 @@
     </script> 
 </head>
 <body>
-    <div id = "header"></div> <!--this will load code for the header @templates\header.html -->
-    <div class = "columnn left">
+    <div id = "header"></div> <!--this will load code for the header @templates\footer.html -->
 
-    </div>
-    <div class = "columnn right">
                
     </div>
-    <div id = "footer">  <!--this will load code for the header @templates\footer.html -->
+    <div id = "footer">
 
     </div>
 </body>
