Made a css script for the header and footer templates

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/mainpage.css">
+<link rel="stylesheet" href="headerFotter.css">
 
 <div class = "header">
     <h1>The Computer Lab</h1>
