Bug Fix with the tempaltes

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="headerFotter.css">
 
-<div class = "header">
+<div class = "headerClass">
     <h1>The Computer Lab</h1>
     <h4 style = "text-align: center;">by theBlueJay3270 and BOB450</h4>
   </div>
