--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -97,3 +97,10 @@ body {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  /*artical cards*/
+  .card {
+    width: 75%;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+  }
