Finished the card for the first article

--- a/templates/header.html
+++ b/templates/header.html
@@ -8,13 +8,13 @@
     <a href="https://thecomputerlab.github.io/">Home</a>
     <a href="https://github.com/TheComputerLab">Github</a>
     <div class="dropdown">
-      <button class="dropbtn">Dropdown 
+      <button class="dropbtn"> Links 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="#">Our team's itch.io</a>
+        <a href="https://bluej3270.itch.io/">bluej3270's itch.io</a>
+        <a href="https://bob4500.itch.io/">BOB450's itch.io</a>
       </div>
     </div> 
   </div>
