--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -29,7 +29,7 @@
 
 /*header*/
 .headerClass {
-    background-color: #33d30c; /*highlight color 1 */
+    background-color: #000000; /*highlight color 1 */
     text-align: center;
     padding: 20px;
 }
@@ -104,6 +104,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
+    background-color: whitesmoke;
   }
 
   .card:hover {
