--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -29,9 +29,10 @@
 
 /*header*/
 .headerClass {
-    background-color: #000000; /*highlight color 1 */
-    text-align: center;
-    padding: 20px;
+  background-color: #000000; /*highlight color 1 */
+  text-align: center;
+  padding: 20px;
+  color: white;
 }
 
 body {
