Fixed a bug with template loading

--- a/templates/article template.html
+++ b/templates/article template.html
@@ -13,8 +13,8 @@
   <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?skin=sunburst"></script>
   <script> 
     $(function(){
-      $("#header").load("templates/header.html"); 
-      $("#footer").load("templates/footer.html"); 
+      $("#header").load("https://thecomputerlab.github.io/templates/header.html"); 
+      $("#footer").load("https://thecomputerlab.github.io/templates/footer.html"); 
     });
     </script> 
 </head>
