--- a/templates/article template.html
+++ b/templates/article template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/mainpage.css">
+    <link rel="stylesheet" href="https://thecomputerlab.github.io/css/mainpage.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Computer Lab</title>
