Added an about us page

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,6 +13,9 @@
         <a href="#">Our team's itch.io</a>
         <a href="https://bluej3270.itch.io/">bluej3270's itch.io</a>
         <a href="https://bob4500.itch.io/">BOB450's itch.io</a>
+        <a href="https://github.com/bluej3270">bluej3270's github</a>
+        <a href="#">BOB450's github</a> <!--TODO:BOB450's github link here-->
       </div>
     </div> 
+    <a href = "aboutUs.html">About Us</a>
   </div>
